--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <label for="email">Correo Electrónico</label>
             <input type="email" id="email" name="email" required>
         </div>
+        <div class="campoForm">
+            <label for="matricula">Correo Electrónico</label>
+            <input type="text" id="matricula" name="matricula" required>
+        </div>
 
         <!-- inputs numericos, telefono y cp -->
         <div class="campoForm">
