--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <!-- proyecto hecho por adrian g.p -->
 </head>
+
 <body>
-    
+
     <form id="form">
         <!-- inputs de texto, nombre, dni, etc -->
         <div class="campoForm">
@@ -28,18 +30,18 @@
             <input type="email" id="email" name="email" required>
         </div>
         <div class="campoForm">
-            <label for="matricula">Correo Electrónico</label>
+            <label for="matricula">Matricula</label>
             <input type="text" id="matricula" name="matricula" required>
         </div>
 
         <!-- inputs numericos, telefono y cp -->
         <div class="campoForm">
             <label for="telefono">Teléfono</label>
-            <input type="tel" id="telefono" name="telefono" required>
+            <input type="text" id="telefono" name="telefono" required>
         </div>
         <div class="campoForm">
             <label for="codigo_postal">Código Postal</label>
-            <input type="number" id="codigo_postal" name="codigo_postal" required>
+            <input type="text" id="codigo_postal" name="codigo_postal" required>
         </div>
 
         <!-- inputs de fecha -->
@@ -66,36 +68,64 @@
             </select>
         </div>
 
+        <!-- selector de comunidades autonomas y sus respectivas provincias -->
         <div class="campoForm">
-            <label for="comunidad">Comunidad</label>
+            <label for="comunidad">Selecciona una Comunidad Autónoma:</label>
             <select id="comunidad" name="comunidad" required>
-                <option value="">Seleccione una comunidad</option>
-                <option value="comunidad1">Comunidad 1</option>
-                <option value="comunidad2">Comunidad 2</option>
+                <option value="" selected disabled>-- Selecciona una comunidad --</option>
+                <option value="Andalucía">Andalucía</option>
+                <option value="Aragón">Aragón</option>
+                <option value="Asturias">Asturias</option>
+                <option value="Islas Baleares">Islas Baleares</option>
+                <option value="Canarias">Canarias</option>
+                <option value="Cantabria">Cantabria</option>
+                <option value="Castilla y León">Castilla y León</option>
+                <option value="Castilla-La Mancha">Castilla-La Mancha</option>
+                <option value="Cataluña">Cataluña</option>
+                <option value="Extremadura">Extremadura</option>
+                <option value="Galicia">Galicia</option>
+                <option value="Madrid">Madrid</option>
+                <option value="Murcia">Murcia</option>
+                <option value="Navarra">Navarra</option>
+                <option value="La Rioja">La Rioja</option>
+                <option value="País Vasco">País Vasco</option>
+                <option value="Comunidad Valenciana">Comunidad Valenciana</option>
+                <option value="Ceuta">Ceuta</option>
+                <option value="Melilla">Melilla</option>
+            </select>
+
+            <label for="provincia">Selecciona una Provincia:</label>
+            <select id="provincia" name="provincia" disabled required>
+                <option value="" selected disabled>-- Selecciona una provincia --</option>
             </select>
         </div>
+
+        <!-- selector de marca y modelo de coche -->
         <div class="campoForm">
-            <label for="provincia">Provincia</label>
-            <select id="provincia" name="provincia" required>
-                <!-- por hacer -->
-            </select>
-        </div>
-        <div class="campoForm">
-            <label for="marca">Marca</label>
+            <label for="marca">Selecciona una Marca:</label>
             <select id="marca" name="marca" required>
-                <!-- por hacer -->
+                <option value="" selected disabled>-- Selecciona una marca --</option>
+                <option value="Toyota">Toyota</option>
+                <option value="Ford">Ford</option>
+                <option value="BMW">BMW</option>
+                <option value="Audi">Audi</option>
+                <option value="Honda">Honda</option>
+                <option value="Mercedes-Benz">Mercedes-Benz</option>
+                <option value="Volkswagen">Volkswagen</option>
+                <option value="Nissan">Nissan</option>
+                <option value="Renault">Renault</option>
+                <option value="Dacia">Dacia</option>
+            </select>
+
+            <label for="modelo">Selecciona un Modelo:</label>
+            <select id="modelo" name="modelo" disabled required>
+                <option value="" selected disabled>-- Selecciona un modelo --</option>
             </select>
         </div>
-        <div class="campoForm">
-            <label for="modelo">Modelo</label>
-            <select id="modelo" name="modelo" required>
-                <!-- por hacer -->
-                <option value="">Seleccione un modelo</option>
-            </select>
-        </div>
+
         <div class="campoForm">
             <label for="tipo_seguro">Tipo de Seguro</label>
-            <select id="tipo_seguro" name="tipo_seguro" required>
+            <select id="tipo_seguro" name="tipo_seguro">
                 <option value="terceros">Terceros</option>
                 <option value="terceros_ampliado">Terceros Ampliado</option>
                 <option value="franquicia">Con Franquicia</option>
@@ -104,7 +134,7 @@
         </div>
         <div class="campoForm">
             <label for="tipo_vehiculo">Tipo de Vehículo</label>
-            <select id="tipo_vehiculo" name="tipo_vehiculo" required>
+            <select id="tipo_vehiculo" name="tipo_vehiculo">
                 <option value="diesel">Diesel</option>
                 <option value="gasolina">Gasolina</option>
                 <option value="hibrido">Híbrido</option>
@@ -132,5 +162,8 @@
         </div>
     </form>
 
+    <script src="script.js"></script>
+
 </body>
+
 </html>
