Final Version, project finished

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         <div class="campoForm">
             <label for="tipo_seguro">Tipo de Seguro</label>
             <select id="tipo_seguro" name="tipo_seguro">
-                <option value="terceros">Terceros</option>
-                <option value="terceros_ampliado">Terceros Ampliado</option>
-                <option value="franquicia">Con Franquicia</option>
-                <option value="todo_riesgo">Todo Riesgo</option>
+                <option value="Terceros">Terceros</option>
+                <option value="Terceros ampliado">Terceros Ampliado</option>
+                <option value="Franquicia">Con Franquicia</option>
+                <option value="Todo riesgo">Todo Riesgo</option>
             </select>
         </div>
         <div class="campoForm">
